--- a/src/front/game.html
+++ b/src/front/game.html
@@ -5,8 +5,11 @@
     <title>Connect 4</title>
 
     <link href="./game.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
 </head>
 <body>
+
+<div class="player-win-container"></div>
 
 <div class="grid-container">
     <table id="gridConnect4">
